# Rapid-Response-Tech

./: Reconocimiento.py  pyproject.toml
