[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "face_recognition"
version = "0.1.0"
description = "proyecto desarollado durante HackMTY"
authors = ["Francisco Axel Roman Cardoza <franaxel@live.com.mx>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5"
face-recognition = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
